--- a/package.json
+++ b/package.json
@@ -30,12 +30,16 @@
     "tpl-repo:check": "npm run tpl-repo -- check",
     "tpl-repo:merge": "npm run tpl-repo -- merge"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "~4.17.15",
+    "rxjs": "~6.5.4"
+  },
   "devDependencies": {
     "@babel/core": "~7.7.5",
     "@babel/preset-env": "~7.7.6",
     "@babel/preset-typescript": "~7.7.4",
     "@types/jest": "~24.0.23",
+    "@types/lodash": "~4.14.149",
     "@typescript-eslint/eslint-plugin": "~2.11.0",
     "@typescript-eslint/parser": "~2.11.0",
     "eslint": "~6.7.2",
