--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "yarn": "^1.21.1"
   },
   "scripts": {
+    "start": "ts-node",
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "build:prod": "npm run build",
     "lint": "eslint --ext .js,.ts src/**",
@@ -52,7 +53,8 @@
     "jest": "~24.9.0",
     "jest-extended": "~0.11.4",
     "rimraf": "~3.0.0",
-    "typescript": "~3.7.3"
+    "typescript": "~3.7.3",
+    "ts-node": "~8.6.2"
   },
   "husky": {
     "hooks": {
